--- a/src/main/webapp/WEB-INF/static/html/login.html
+++ b/src/main/webapp/WEB-INF/static/html/login.html
@@ -7,12 +7,12 @@
     <title>登录-基于HDFS的文件同步系统</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <link href="/css/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="/css/login.css" rel="stylesheet" type="text/css">
+    <link href="/static/css/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/static/css/login.css" rel="stylesheet" type="text/css">
 
     <!--[if lt IE 9]>
-	<script type="text/javascript" src="/js/bootstrap/html5shiv.min.js"></script>
-	<script type="text/javascript" src="/js/bootstrap/respond.min.js"></script>
+	<script type="text/javascript" src="/static/js/bootstrap/html5shiv.min.js"></script>
+	<script type="text/javascript" src="/static/js/bootstrap/respond.min.js"></script>
 	<![endif]-->
   </head>
   <body>
@@ -27,8 +27,8 @@
       </form>
     </div>
 
-	<script type="text/javascript" src="/js/jquery/jquery-1.11.3.js"></script>
-	<script type="text/javascript" src="/js/bootstrap/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/js/login.js"></script>
+	<script type="text/javascript" src="/static/js/jquery/jquery-1.11.3.js"></script>
+	<script type="text/javascript" src="/static/js/bootstrap/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/static/js/login.js"></script>
   </body>
 </html>
