--- a/src/main/webapp/WEB-INF/static/html/index.html
+++ b/src/main/webapp/WEB-INF/static/html/index.html
@@ -2,7 +2,7 @@
 	<head><title>Hello Spring MVC</title></head>
 	<body>
 		<p>This is a HTML file</p>
-		<p>see <a href="/html/about.html">about</a></p>
-		<p><a href="/html/login.html">Sign in</a></p>
+		<p>see <a href="/static/html/about.html">about</a></p>
+		<p><a href="/static/html/login.html">Sign in</a></p>
 	</body>
 </html>
