--- a/src/main/webapp/WEB-INF/static/html/index.html
+++ b/src/main/webapp/WEB-INF/static/html/index.html
@@ -1,8 +1,13 @@
-<html>
-	<head><title>Hello Spring MVC</title></head>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+<meta charset="utf-8">
+<title>Hello Spring MVC</title>
+</head>
 	<body>
 		<p>This is a HTML file</p>
-		<p>see <a href="/static/html/about.html">about</a></p>
-		<p><a href="/static/html/login.html">Sign in</a></p>
+		<p>see <a href="/cloud/about.html">about</a></p>
+		<p><a href="/cloud/login.html">Sign in</a></p>
+		中文测试
 	</body>
 </html>
