--- a/src/main/webapp/WEB-INF/static/html/login.html
+++ b/src/main/webapp/WEB-INF/static/html/login.html
@@ -4,15 +4,15 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
-<title>登录-基于HDFS的文件同步系统</title>
+<title>登录 | 文件同步系统</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
-<link href="/static/css/bootstrap/bootstrap.min.css" rel="stylesheet">
-<link href="/static/css/login.css" rel="stylesheet">
+<link href="/css/bootstrap/bootstrap.min.css" rel="stylesheet">
+<link href="/css/login.css" rel="stylesheet">
 
 <!--[if lt IE 9]>
-	<script src="/static/js/bootstrap/html5shiv.min.js"></script>
-	<script src="/static/js/bootstrap/respond.min.js"></script>
+	<script src="/js/bootstrap/html5shiv.min.js"></script>
+	<script src="/js/bootstrap/respond.min.js"></script>
 	<![endif]-->
 </head>
 <body>
@@ -26,11 +26,13 @@
 			<input type="text" name="username" class="form-control"	placeholder="用户名" required autofocus id="name"> 
 			<input type="password" name="password" class="form-control"	placeholder="密码" required id="pwd">
 			<button class="btn btn-lg btn-primary btn-block" type="button" id="login">登录</button>
+			<br>
+			<p><a href="register.html">还没有帐号？</a></p>
 		</form>
 	</div>
 
-	<script src="/static/js/jquery/jquery-1.11.3.js"></script>
-	<script src="/static/js/bootstrap/bootstrap.min.js"></script>
-	<script src="/static/js/login.js"></script>
+	<script src="/js/jquery/jquery-1.11.3.js"></script>
+	<script src="/js/bootstrap/bootstrap.min.js"></script>
+	<script src="/js/login.js"></script>
 </body>
 </html>
