--- a/src/main/webapp/WEB-INF/static/html/login.html
+++ b/src/main/webapp/WEB-INF/static/html/login.html
@@ -27,7 +27,7 @@
 			<input type="password" name="password" class="form-control"	placeholder="密码" required id="pwd">
 			<button class="btn btn-lg btn-primary btn-block" type="button" id="login">登录</button>
 			<br>
-			<p><a href="register.html">还没有帐号？</a></p>
+			<a href="register.html">还没有帐号？</a>
 		</form>
 	</div>
 
