--- a/src/main/webapp/WEB-INF/static/html/register.html
+++ b/src/main/webapp/WEB-INF/static/html/register.html
@@ -20,29 +20,29 @@
 		<form class="form-signup" role="form" id="fm">
 			<h2 class="signup-title">注册帐号</h2>
 			<div class="item">
-				<label>请输入用户昵称:</label>
-				<input type="text" name="nickname" class="form-control" required id="username">
-				<span id="error-msg"></span>
+				<!-- <label>请输入用户昵称:</label> -->
+				<input type="text" name="nickname" class="form-control" placeholder="请输入用户昵称" required id="username">
+				<span id="error-msg" class="error"></span>
 			</div>
 			<div class="item">
-				<label>请输入用户密码:</label>
-				<input type="password" name="pwd" class="form-control" required id="password">
-				<span id="error-msg"></span>
+				<!-- <label>请输入用户密码:</label> -->
+				<input type="password" name="pwd" class="form-control" placeholder="请输入用户密码" required id="password">
+				<span id="error-msg" class="error"></span>
 			</div>
 			<div class="item">
-				<label>请输入确认密码:</label>
-				<input type="password" name="cfm" class="form-control" required id="confirm">
-				<span id="error-msg"></span>
+				<!-- <label>请输入确认密码:</label> -->
+				<input type="password" name="cfm" class="form-control" placeholder="请输入确认密码" required id="confirm">
+				<span id="error-msg" class="error"></span>
 			</div>
 			<div class="item">
-				<label>请输入邮箱地址:</label>
-				<input type="text" name="email" class="form-control" required id="email">
-				<span id="error-msg"></span>
+				<!-- <label>请输入邮箱地址:</label> -->
+				<input type="text" name="email" class="form-control" placeholder="请输入邮箱地址" required id="email">
+				<span id="error-msg" class="error"></span>
 			</div>
 			<button class="btn btn-lg btn-primary btn-block" type="button" id="signup">立即注册</button>
+			<br>
+			<a href="/cloud/login.html">返回登录页面</a>
 		</form>
-		<br>
-		<p><a href="/cloud/login.html">返回登录页面</a></p>
 	</div>
 	
 	<script src="/js/jquery/jquery-3.1.1.min.js"></script>
