--- a/src/main/webapp/WEB-INF/static/html/login.html
+++ b/src/main/webapp/WEB-INF/static/html/login.html
@@ -31,7 +31,7 @@
 		</form>
 	</div>
 
-	<script src="/js/jquery/jquery-1.11.3.js"></script>
+	<script src="/js/jquery/jquery-3.1.1.min.js"></script>
 	<script src="/js/bootstrap/bootstrap.min.js"></script>
 	<script src="/js/login.js"></script>
 </body>
