change package name

--- a/src/main/webapp/WEB-INF/static/html/index.html
+++ b/src/main/webapp/WEB-INF/static/html/index.html
@@ -6,8 +6,8 @@
 </head>
 	<body>
 		<p>This is a HTML file</p>
-		<p>see <a href="/cloud/about.html">about</a></p>
-		<p><a href="/cloud/login.html">Sign in</a></p>
+		<p>see <a href="about.html">about</a></p>
+		<p><a href="login.html">Sign in</a></p>
 		中文测试
 	</body>
 </html>
