--- a/src/main/webapp/WEB-INF/static/html/register.html
+++ b/src/main/webapp/WEB-INF/static/html/register.html
@@ -41,7 +41,7 @@
 			</div>
 			<button class="btn btn-lg btn-primary btn-block" type="button" id="signup">立即注册</button>
 			<br>
-			<a href="/cloud/login.html">返回登录页面</a>
+			<a href="login.html">返回登录页面</a>
 		</form>
 	</div>
 	
