--- a/src/main/webapp/WEB-INF/static/html/index.html
+++ b/src/main/webapp/WEB-INF/static/html/index.html
@@ -23,5 +23,9 @@
 				<a href="register.html">还没有帐号？</a>
 			</form>
 		</div>
+		
+		<script type="text/javascript" src="../js/jquery/jquery-3.1.1.min.js"></script>
+		<script type="text/javascript" src="../js/bootstrap/bootstrap.min.js"></script>
+		<script type="text/javascript" src="../js/login.js"></script>
 	</body>
 </html>
