--- a/src/main/webapp/WEB-INF/static/html/index.html
+++ b/src/main/webapp/WEB-INF/static/html/index.html
@@ -15,7 +15,7 @@
 		<div id="info">
 			<form class="signin" role="form" id="fm">
 				<h2 class="heading">请先登录</h2>
-				<p class="errmsg">* 帐号或密码错误</p>
+				<p class="errmsg"></p>
 				<input type="text" name="username" class="form-control" placeholder="用户名" required autofocus id="username">
 				<input type="password" name="password" class="form-control" placeholder="密码" required id="password">
 				<button class="btn btn-lg btn-primary btn-block" type="button" id="login">登录</button>
