add signup function

--- a/src/main/webapp/WEB-INF/static/html/register.html
+++ b/src/main/webapp/WEB-INF/static/html/register.html
@@ -39,5 +39,9 @@
 				<a href="/">返回登录</a>
 			</form>
 		</div>
+		
+		<script type="text/javascript" src="../js/jquery/jquery-3.1.1.min.js"></script>
+		<script type="text/javascript" src="../js/bootstrap/bootstrap.min.js"></script>
+		<script type="text/javascript" src="../js/register.js"></script>
 	</body>
 </html>
