--- a/src/main/webapp/WEB-INF/static/html/index.html
+++ b/src/main/webapp/WEB-INF/static/html/index.html
@@ -26,6 +26,7 @@
 		
 		<script type="text/javascript" src="../js/jquery/jquery-3.1.1.min.js"></script>
 		<script type="text/javascript" src="../js/bootstrap/bootstrap.min.js"></script>
+		<script type="text/javascript" src="../js/spark/spark-md5.min.js"></script>
 		<script type="text/javascript" src="../js/login.js"></script>
 	</body>
 </html>
