--- a/src/main/webapp/WEB-INF/static/html/register.html
+++ b/src/main/webapp/WEB-INF/static/html/register.html
@@ -42,6 +42,7 @@
 		
 		<script type="text/javascript" src="../js/jquery/jquery-3.1.1.min.js"></script>
 		<script type="text/javascript" src="../js/bootstrap/bootstrap.min.js"></script>
+		<script type="text/javascript" src="../js/spark/spark-md5.min.js"></script>
 		<script type="text/javascript" src="../js/register.js"></script>
 	</body>
 </html>
