create, delete and list directory information

--- a/src/main/webapp/WEB-INF/static/html/home.html
+++ b/src/main/webapp/WEB-INF/static/html/home.html
@@ -34,19 +34,19 @@
 				
 				<div class="tb-item">
 					<span id="tb-download">
-						<!-- <i class="icon icon-download"></i> -->
+						<i class="icon icon-download"></i>
 						<span class="label label-default">下载</span>
 					</span>
 					<span id="tb-delete">
-						<!-- <i class="icon icon-delete"></i> -->
+						<i class="icon icon-delete"></i>
 						<span class="label label-default">删除</span>
 					</span>
 					<span id="tb-move">
-						<!-- <i class="icon icon-move"></i> -->
+						<i class="icon icon-move"></i>
 						<span class="label label-default">移动</span>
 					</span>
 					<span id="tb-rename">
-						<!-- <i class="icon icon-rename"></i> -->
+						<i class="icon icon-rename"></i>
 						<span class="label label-default">重命名</span>
 					</span>
 				</div>
@@ -56,7 +56,7 @@
 		<div class="menu"><a href="">所有文件</a></div>
 		<div class="list-header">
 			<ul class="list-cols">
-				<li class="col first-col">
+				<li class="col file-name-item">
 					<div class="col-item check">
 						<span class="check-icon"></span>
 						<span class="check-all-text">全选</span>
@@ -64,10 +64,10 @@
 					</div>
 					<span class="text">文件名</span>
 				</li>
-				<li class="col">
+				<li class="col file-size-item">
 					<span class="text">大小</span>
 				</li>
-				<li class="col last-col descend">
+				<li class="col file-mtime-item descend">
 					<span class="text">修改日期</span>
 				</li>
 			</ul>
