--- a/src/main/webapp/WEB-INF/static/html/home.html
+++ b/src/main/webapp/WEB-INF/static/html/home.html
@@ -80,6 +80,7 @@
 		<script type="text/javascript" src="../js/jquery/jquery-3.1.1.min.js"></script>
 		<script type="text/javascript" src="../js/bootstrap/bootstrap.min.js"></script>
 		<script type="text/javascript" src="../js/moment.min.js"></script>
+		<script type="text/javascript" src="../js/cookie.js"></script>
 		<script type="text/javascript" src="../js/home.js"></script>		
 	</body>
 </html>
