--- a/resources/static/system/pages/wesign/transit-state-tip.html
+++ b/resources/static/system/pages/wesign/transit-state-tip.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>云取证</title>
+<title>蜗云</title>
 <div th:replace="system/pages/common/login-common.html :: copy-common-head"></div>
 </head>
 <body style="background-color: #f0f3f5;">
