--- a/resources/static/system/pages/wesign/register.html
+++ b/resources/static/system/pages/wesign/register.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <div th:replace="system/pages/common/login-common.html :: copy-common-head"></div>
-<title>立即注册|云取证</title>
+<title>立即注册 | 蜗云</title>
 </head>
 <body>
 	<div th:replace="system/pages/common/login-common.html :: copy-login-header"></div>
