--- a/resources/static/system/pages/wesign/users/my-info/reset-phone.html
+++ b/resources/static/system/pages/wesign/users/my-info/reset-phone.html
@@ -15,7 +15,7 @@
 		<div class="ui-nav-container">
 			<div class="ui-nav-content">
 				<h2 class="setForm-title">
-					<a th:href="@{'/wesign/'+${session.loginRole}+'/my-info.html'}" class="previous-page">账号设置</a>&nbsp;&nbsp;＞&nbsp;&nbsp;设置手机号
+					<a th:href="@{'/wesign/my-info.html'}" class="previous-page">账号设置</a>&nbsp;&nbsp;＞&nbsp;&nbsp;设置手机号
         		</h2>
 			</div>
 		</div>
